--- a/Views/Admin/DetailCourseCs.cshtml
+++ b/Views/Admin/DetailCourseCs.cshtml
@@ -89,7 +89,7 @@
 
                         <td>
                             <center>
-                                <a class="btn btn-warning" asp-controller="Home"
+                                <a class="btn btn-warning" asp-controller="Admin"
                                    asp-action="DetailSubCs"
                                    asp-route-id="@CourseCs.Codecssub">Detail</a>
                             </center>
