--- a/Views/Home/DetailSubCs.cshtml
+++ b/Views/Home/DetailSubCs.cshtml
@@ -33,6 +33,11 @@
         thead {
             padding: 30px;
         }
+
+        .a {
+            border: white;
+            font-size: xx-large;
+        }
     </style>
 
 </head>
@@ -51,17 +56,15 @@
     <div class="w3-main" style="margin-left:250px;">
 
         <header class="w3-container" style="padding:26px 32px">
-            <h1 class="w3-xxxlarge">คำอธิบายรายวิชา</h1>
+            <textarea rows="1" cols="50" asp-for="Namethaics" class="a"></textarea>
         </header>
-        <br>
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
             <hr />
             <div class="row">
-                <label asp-for="Subdescs" class="form-label"></label>
                 <p></p>
-                <textarea rows="5" cols="50" asp-for="Subdescs" class="form-control-lg"></textarea>
+                <textarea rows="5" cols="50" asp-for="Subdescs" class="form-control-lg" disabled></textarea>
             </div>
                 
         </form>
