--- a/Views/Admin/FullCourseCs.cshtml
+++ b/Views/Admin/FullCourseCs.cshtml
@@ -1,14 +1,13 @@
-﻿@model IEnumerable<ProjectFinal1.Models.CsCourse>;
+﻿ @model IEnumerable<ProjectFinal1.Models.V_CourseCss>;
 <!DOCTYPE html>
 <html lang="en">
 @{
-    ViewData["Title"] = "CourseCs";
+    ViewData["Title"] = "FullCourseCs";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 
     <!-- Include jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -32,60 +31,48 @@
             font-weight: bold;
         }
 
-        thead {
-            padding: 30px;
+        tr {
+            padding: 100px;
         }
     </style>
 
 </head>
+
 <body>
     <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:240px;background:white;" id="mySidebar">
-        <span class="w3-bar-item w3-border-bottom w3-large">User</span>
+        <span class="w3-bar-item w3-border-bottom w3-large">Admin</span>
         <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
 
-        <a class="w3-bar-item w3-button" href="@Url.Action("Index","Home")">หน้าแรก</a>
-        <a class="w3-bar-item w3-button w3-pale-blue">หลักสูตรวิทย์คอม</a>
-        <a class="w3-bar-item w3-button" href="@Url.Action("CourseTra","Home")">หลักสูตรปวส.</a>
-        <a class="w3-bar-item w3-button" href="@Url.Action("TransferCourse","Home")">เทียบโอนวิชา</a>
-        <a class="w3-bar-item w3-button" asp-area="Identity" asp-page="/Account/Image">รูปทรานสคริปต์</a>
+        <a class="w3-bar-item w3-button w3-pale-red" href="@Url.Action("CourseCsAdmin","Admin")">ย้อนกลับ</a>
+        <a class="w3-bar-item w3-button w3-pale-blue">@Model.FirstOrDefault()?.Namecoursecs</a>
     </nav>
 
     <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
 
     <div class="w3-main" style="margin-left:250px;">
-        <header class="w3-container" style="padding:26px 32px">
-            <center><h1 class="w3-xxlarge">หลักสูตรวิทยาการคอม</h1></center>
+
+        <header class="w3-container w3-pale-white" style="padding:26px 32px">
+
+            <Center><h1 class="w3-xxxlarge">@Model.FirstOrDefault()?.Namecoursecs</h1></Center>
+
         </header>
-        <br />
-        <table id="example" class="display">
-            <thead>
-                <tr>
-                    <th>รหัสหลักสูตร</th>
-                    <th>ชื่อหลักสูตร</th>
-                    <th>สถานะ</th>
 
-                    <th>รายละเอียด</th>
-
-
-                </tr>
-            </thead>
-            <tbody>
                 @foreach (var CourseCs in Model)
                 {
                     <tr>
-                        <td>@CourseCs.Codecoursecs</td>
-                        <td>@CourseCs.Namecoursecs</td>
-                        <td>@CourseCs.statuscoursecs</td>
-
-                            <td>
-                                <a class="btn btn-warning" asp-controller="Home"
-                                asp-action="DetailCourseCs"
-                                asp-route-id="@CourseCs.Codecoursecs">View</a>
-                            </td>
+                        <label style="color:#cc0000; font-size:large;"><td>@CourseCs.Namesubtype</td></label>
+                        <p></p>
+                        <label style="color:#4d88ff;"><td>@CourseCs.Namesubgroup</td></label>
+                        <p></p>
+                        <td>@CourseCs.Codesubcs</td>
+                        <td>@CourseCs.Namethaics</td>
+                        <td>@CourseCs.Nameengcs</td>
+                        <td>@CourseCs.Credits</td>
+                        <p></p>
+                        <td>@CourseCs.Subdescs</td>
+                        <p></p>
                     </tr>
                 }
-            </tbody>
-        </table>
 
     </div>
 
@@ -133,3 +120,4 @@
     }
 
 </script>
+
