--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -52,6 +52,9 @@
         <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
         <div class="w3-main" style="margin-left:250px;">
 
+            <header class="w3-container w3-pale-white" style="padding:64px 32px">
+                <center><h1 class="w3-xxxlarge">ยินดีต้อนรับ สู่ ระบบเทียบโอน</h1></center>
+            </header>
 
     </div>
     } 
@@ -73,7 +76,7 @@
         <div class="w3-main" style="margin-left:250px;">
 
             <header class="w3-container w3-pale-white" style="padding:64px 32px">
-                <center><h1 class="w3-xxxlarge">Welcome to System Transfer</h1></center>
+                <center><h1 class="w3-xxxlarge">ยินดีต้อนรับ สู่ ระบบเทียบโอน</h1></center>
             </header>
 
     </div>
