--- a/Areas/Identity/Pages/Account/Image.cshtml
+++ b/Areas/Identity/Pages/Account/Image.cshtml
@@ -1,13 +1,62 @@
 ﻿@page
 @model ProjectFinal1.Areas.Identity.Pages.Account.ImageModel
+<html lang="en">
 @{
     ViewData["Title"] = "Image";
 }
-<header class="w3-container" style="padding:26px 32px">
-    <h1 class="w3-xxxlarge">ทรานสคริปต์</h1>
-</header>
-<a button class="col-sm-1 btn btn-danger" type="submit" asp-area="Controller" asp-page="/Home/Index">ย้อนกลับ</a><br/><br/>
-<partial name="_StatusMessage" for="StatusMessage" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <!-- Include jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+    <!-- Include DataTables CSS and JS files -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-teal.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <style>
+        body {
+            font-family: "Roboto", sans-serif;
+            color: black;
+        }
+
+        .w3-bar-block .w3-bar-item {
+            padding: 16px;
+            font-weight: bold;
+        }
+
+        thead {
+            padding: 30px;
+        }
+    </style>
+
+</head>
+<body>
+    <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:240px;background:white;" id="mySidebar">
+        <span class="w3-bar-item w3-border-bottom w3-large">User</span>
+        <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
+
+        <a class="w3-bar-item w3-button" href="@Url.Action("Index","Home")">หน้าแรก</a>
+        <a class="w3-bar-item w3-button" href="@Url.Action("CourseCs","Home")">หลักสูตรวิทย์คอม</a>
+        <a class="w3-bar-item w3-button" href="@Url.Action("CourseTra","Home")">หลักสูตรปวส.</a>
+        <a class="w3-bar-item w3-button" href="@Url.Action("TransferCourse","Home")">เทียบโอนวิชา</a>
+        <a class="w3-bar-item w3-button w3-pale-blue">รูปทรานสคริปต์</a>
+    </nav>
+
+    <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
+
+    <div class="w3-main" style="margin-left:250px;">
+<center>
+    <header class="w3-container" style="padding:26px 32px">
+        <h1 class="w3-xxlarge">ทรานสคริปต์</h1>
+    </header>
+    <partial name="_StatusMessage" for="StatusMessage" />
     <div class="col-md-4">
         <form method="post" enctype="multipart/form-data">
             
@@ -36,7 +85,10 @@
             </div>
         </form>
     </div>
-
+</div>
+</center>
+</body>
+</html>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
