--- a/Views/Home/CourseTra.cshtml
+++ b/Views/Home/CourseTra.cshtml
@@ -48,14 +48,13 @@
         <a class="w3-bar-item w3-button w3-pale-blue">หลักสูตรปวส.</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("TransferCourse","Home")">เทียบโอนวิชา</a>
         <a class="w3-bar-item w3-button" asp-area="Identity" asp-page="/Account/Image">รูปทรานสคริปต์</a>
-        <a class="w3-bar-item w3-button" asp-area="Identity" asp-page="/Account/Manage/PairSub">เทียบโอนวิชา</a>
     </nav>
 
     <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
 
     <div class="w3-main" style="margin-left:250px;">
         <header class="w3-container" style="padding:26px 32px">
-            <center><h1 class="w3-xxxlarge">หลักสูตรปวส.</h1></center>
+            <center><h1 class="w3-xxlarge">หลักสูตรปวส.</h1></center>
         </header>
         <br />
 
