--- a/Views/Home/TransferSub.cshtml
+++ b/Views/Home/TransferSub.cshtml
@@ -51,7 +51,7 @@
     <div class="w3-main" style="margin-left:250px;">
 
         <header class="w3-container" style="padding:26px 32px">
-            <Center><h1>@Model.FirstOrDefault()?.Namecoursecs - @Model.FirstOrDefault()?.Namecoursetra</h1></Center>
+            <Center><h1 class="w3-xxlarge">@Model.FirstOrDefault()?.Namecoursecs - @Model.FirstOrDefault()?.Namecoursetra</h1></Center>
         </header>
         <br />
 
