--- a/Views/Admin/TransferSub.cshtml
+++ b/Views/Admin/TransferSub.cshtml
@@ -62,13 +62,13 @@
                     <th>รหัสเทียบวิชา</th>
                     @* <th>รหัสเทียบหลักสูตร</th> *@
 
-                    <th>ชื่อหลักสูตรวิทย์คอม</th>
-                    <th>รหัสรายวิชาวิทย์คอม</th>
+                    @* <th>ชื่อหลักสูตรวิทย์คอม</th> *@
+                    @* <th>รหัสรายวิชาวิทย์คอม</th> *@
                     <th>รหัสวิชาวิทย์คอม</th>
                     <th>ชื่อวิชาวิทย์คอม</th>
 
-                    <th>ชื่อหลักสูตรปวส.</th>
-                    <th>รหัสรายวิชาปวส.</th>
+                    @* <th>ชื่อหลักสูตรปวส.</th> *@
+                    @* <th>รหัสรายวิชาปวส.</th> *@
                     <th>รหัสวิชาปวส.</th>
                     <th>ชื่อวิชาปวส.</th>
 
@@ -82,16 +82,26 @@
                         <td>@TraCs.CodeSubtrans</td>
                         @* <td>@TraCs.CodeCoursetran</td> *@
 
-                        <td>@TraCs.Namecoursecs</td>
-                        <td>@TraCs.Codecs</td>
+                        @* <td>@TraCs.Namecoursecs</td> *@
+                        @* <td>@TraCs.Codecs</td> *@
                         <td>@TraCs.Codesubcs</td>
                         <td>@TraCs.Namethaics</td>
 
 
-                        <td>@TraCs.Namecoursetra</td>
-                        <td>@TraCs.Codetra</td>
+                        @* <td>@TraCs.Namecoursetra</td> *@
+                        @* <td>@TraCs.Codetra</td> *@
                         <td>@TraCs.Codesubtra</td>
                         <td>@TraCs.Namethaitra</td>
+
+
+                        <td>
+                            <center>
+                                <a class="btn btn-warning" asp-controller="Admin"
+                                   asp-action="DetailSubCsTra"
+                                   asp-route-id="@TraCs.CodeSubtrans">Detail</a>
+                            </center>
+                        </td>
+
                     </tr>
                 }
             </tbody>
