--- a/Views/Home/CourseTra.cshtml
+++ b/Views/Home/CourseTra.cshtml
@@ -46,7 +46,7 @@
         <a class="w3-bar-item w3-button" href="@Url.Action("Index","Home")">หน้าแรก</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("CourseCs","Home")">หลักสูตรวิทย์คอม</a>
         <a class="w3-bar-item w3-button w3-pale-blue">หลักสูตรปวส.</a>
-        <a class="w3-bar-item w3-button" href="@Url.Action("TransferCourse","Home")">เทียบโอนวิชา</a>
+        <a class="w3-bar-item w3-button" href="@Url.Action("TransferCourse","Home")">เทียบโอนหลักสูตร</a>
         <a class="w3-bar-item w3-button" asp-area="Identity" asp-page="/Account/Image">รูปทรานสคริปต์</a>
     </nav>
 
