--- a/Views/Home/TransferCourse.cshtml
+++ b/Views/Home/TransferCourse.cshtml
@@ -62,7 +62,7 @@
             <table id="example" class="display">
                 <thead>
                     <tr>
-                        <th>หลักสูตรที่</th>
+                        @* <th>หลักสูตรที่</th> *@
                         <th>รหัสหลักสูตรปวส.</th>
                         <th>ชื่อหลักสูตรปวส.</th>
                         <th>รหัสหลักสูตรวิทย์คอม</th>
@@ -77,7 +77,7 @@
                     @foreach (var TraCs in Model)
                     {
                         <tr>
-                            <td>@TraCs.CodeCoursetrans</td>
+                            @* <td>@TraCs.CodeCoursetrans</td> *@
                             <td>@TraCs.CourseTra</td>
                             <td>@TraCs.Namecoursetra</td>
                             <td>@TraCs.CourseCs</td>
