--- a/Areas/Identity/Pages/Account/Image.cshtml
+++ b/Areas/Identity/Pages/Account/Image.cshtml
@@ -45,7 +45,7 @@
         <a class="w3-bar-item w3-button" href="@Url.Action("Index","Home")">หน้าแรก</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("CourseCs","Home")">หลักสูตรวิทย์คอม</a>
         <a class="w3-bar-item w3-button" href="@Url.Action("CourseTra","Home")">หลักสูตรปวส.</a>
-        <a class="w3-bar-item w3-button" href="@Url.Action("TransferCourse","Home")">เทียบโอนวิชา</a>
+        <a class="w3-bar-item w3-button" href="@Url.Action("TransferCourse","Home")">เทียบโอนหลักสูตร</a>
         <a class="w3-bar-item w3-button w3-pale-blue">รูปทรานสคริปต์</a>
     </nav>
 
